objects/DLCObj18__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Phone</type>
    </fields>
    <label>DLCObj18</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DLCObj18 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DLCObj18s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>